# tg-acitivity-parser

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml  spec_1_telegram_chat_active_authors.md
api/: Dockerfile  README.md  main.py
api/auth/: dependencies.py  service.py
api/core/: __init__.py  cache.py  config.py  db.py
api/routers/: aggregates.py  auth.py  chat_authors.py  export.py  sessions.py  tracked.py
api/schemas/: aggregate.py  auth.py  chat_authors.py  common.py  session.py  tracked.py
api/services/: aggregates.py  sessions.py  telegram_resolver.py  tracked.py
collector/: Dockerfile  README.md  __init__.py  app.py  chat_authors.py  login.py  scheduler.py  status_tracker.py  storage.py  telemetry.py
collector/jobs/: __init__.py
collector/metrics/: __init__.py
common/: __init__.py  aggregation.py  chat_authors.py  config.py  db.py  logging.py  models.py  security.py
docs/policies/: consent_policy.md
migrations/: alembic.ini  env.py
migrations/versions/: 0001_initial.py  0002_chat_active_authors.py
ops/backup/: backup.sh
ops/docker/: .env.example  docker-compose.yml
spec1_tg_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_settings.py
web/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: dashboard.tsx  login-gate.tsx  search-results.tsx  sessions-table.tsx  user-summary.tsx
web/components/charts/: HeatmapChart.tsx  HourlyDistributionChart.tsx  TrendLineChart.tsx
web/lib/: api.ts
web/store/: use-auth.ts
