[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spec1-tg-tracker"
version = "0.1.0"
description = "Telegram presence tracking platform (collector + API + dashboard)"
authors = [{ name = "SPEC-1 Team" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.1",
    "sqlalchemy==2.0.31",
    "psycopg[binary]==3.1.19",
    "asyncpg==0.29.0",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "alembic==1.13.2",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "redis==5.0.7",
    "telethon==1.41.0",
    "email-validator==2.1.0.post1",
    "apscheduler==3.10.4",
    "orjson==3.10.7",
    "structlog==24.1.0",
    "tenacity==9.0.0",
    "httpx==0.27.0",
    "python-multipart==0.0.9"
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "ruff==0.5.5",
    "black==24.8.0",
    "isort==5.13.2",
    "mypy==1.10.0",
    "types-redis==4.6.0.20240425",
    "types-python-jose==3.3.4.8",
    "types-orjson==3.6.2"
]

[tool.setuptools.packages.find]
include = ["api*", "collector*", "common*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --asyncio-mode=auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I", "UP", "ASYNC", "Q", "PL"]
target-version = "py312"
